--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ form input[type="button"]{
   font-size: 1rem;
   font-weight: 600;
   margin-bottom: 0px;
+  cursor: pointer;
 }
 
 
@@ -132,10 +133,22 @@ form input[type="button"]{
   color: #282c34;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction: row;
   padding: 20px;
   font-size: 1.5rem;
   font-weight: 600;
+}
+.dashMain{
+  width: 100%;
+  height: calc(100% - 80px);
+}
+#logoutbtn{
+  color: #4ec98f;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font-size: 1rem;
 }
 #forgotpass{
   margin-top: 10px;
@@ -177,4 +190,84 @@ form input[type="button"]{
   width: clamp(300px,100%,350px);
   margin-top: 20px;
   cursor: pointer;
+}
+.overviewDash{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  flex-wrap: wrap;
+  padding: 20px 30px;
+  gap: 20px;
+}
+#courseElement{
+  width: 300px;
+  background-color: white;
+  height: 300px;
+  border-radius: 10px;
+  padding: 10px;
+  position: relative;
+
+}
+#coursePicture{
+  height: 200px;
+  background-image: url('./assets/coursecover.png');
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+}
+
+#courseElement button{
+  width: 100%;
+  height: 30px;
+  color: #f5f5f5;
+  background-color: #4ec98f;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  
+}
+#courseTitle{
+  height: calc(100% - 200px - 30px);
+  color:#007aff;
+  font-weight: 600;
+  font-size: 1rem;
+  padding-top: 10px;
+}
+.profilePage{
+  padding: 30px;
+}
+.profileComp{
+  width: 500px;
+  height: 100%;
+  
+}
+.picture_andName{
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 50px;
+}
+#picture{
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  background-color: #007aff;
+
+}
+#name{
+  font-size: 1.2rem;
+  font-weight: 800;
+  
+}
+#tag{
+  font-size: 0.8rem;
+  padding: 5px;
+  color: #f5f5f5;
+  background-color: #4ec98f;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
 }
